--- a/src/components/Loader/Loader.scss
+++ b/src/components/Loader/Loader.scss
@@ -9,7 +9,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 300px; /* Ensures loader is visible before content */
+    // min-height: 300px; /* Ensures loader is visible before content */
   }
   
   .loader {
