--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,4 +1,7 @@
+@import url('https://fonts.cdnfonts.com/css/lufga');
+
 .footer {
+  font-family: "Lugfa";
   width: 100%;
   height: 40px;
   color: #A47764;
@@ -8,12 +11,13 @@
   position: relative;
   bottom: 0;
   left: 0;
-  font-size: 12px;
+  font-size: 13px;
 }
 
 /* Mobile Responsive */
 @media (max-width: 768px) {
   .footer {
+    font-family: "Lugfa";
     height: 60px;
     font-size: 11px;
     text-align: center;
