--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,27 +1,24 @@
 .header {
   width: 100%;
-  height: 100px; 
-  padding-top: 50px;
-  padding-top: 50px;
+  height: 200px;  
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute;
-  top: 0;
-  left: 0;
   z-index: 10;
+
+  .logo {
+    // width: 155px;  
+    height: 100px;
+    margin: 50px 0px 50px 0px;
+    object-fit: contain;
+  }
 }
 
-.logo {
-  width: 155px;  
-  height: 100px;
-  object-fit: contain;
-}
+
 
 /* Mobile Responsive */
 @media (max-width: 768px) {
   .header {
-    height: 80px;
-    padding-top: 20px;
+    height: 200px;
   }
 }
