--- a/src/components/OnlineStores/OnlineStores.scss
+++ b/src/components/OnlineStores/OnlineStores.scss
@@ -11,95 +11,83 @@
 
 .stores {
   text-align: center;
-  padding: 40px;
+  font-family: 'Lufga';
   color: #A47764;
-}
 
-.heading {
-  text-align: center;
-  padding-top: 113px;
-
-  h1 {
-    font-size: 60px; 
-    color: #A47764;
-    margin-bottom: 10px;
+  .heading {
+    text-align: center;
+  
+    h1 {
+      font-size: 80px;  
+    }
   }
-}
-.paragraph {
-  p {
-    font-size: 16px; 
-    color: #A47764;
-    margin-bottom: 70px;
+  .paragraph {
+    p {
+      font-size: 20px;   
+      margin-bottom: 60px;
+    }
   }
-}
-.subHeading {
-  text-align: center;
-
-  h2 {
-    font-size: 28px; 
-    color: #A47764;
-    margin-bottom: 10px;
+  .subHeading {
+    text-align: center;
+  
+    h2 {
+      font-size: 40px;  
+      margin-bottom: 25px;
+    }
   }
+
+  .store-logos {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    width: 1500px;
+    height: 390px;
+    margin-bottom: 60px;
+    
+    .store-box {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: #000000;
+      border-radius: 20px;
+      opacity: 0;
+      transform: translateY(-50px);
+      animation: dropDown 0.8s ease-out forwards;
+    }
+    .amazon, .walmart {
+      width: 390px;
+      height: 390px;
+    }
+    .center {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+    }
+    
+    .top, .bottom {
+      display: flex;
+      gap: 20px;
+    }
+    
+    .target, .ebay {
+      width: 220px;
+      height: 185px;
+    }
+    .etsy, .tiktok {
+      width: 440px;
+      height: 185px;
+      padding: 40px 45px;
+    }
+    .store-box img {
+      max-width: 100%;
+      max-height: 100%;
+    }
+  }
+
 }
 
-.store-logos {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 15px;
-  margin-top: 20px;
-}
 
-.store-box {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: #000000;
-  border-radius: 20px;
-  padding: 20px;
-  opacity: 0; /* Initially hidden */
-  transform: translateY(-50px);
-  animation: dropDown 0.8s ease-out forwards;
-}
-
-/* Applying the correct sizes */
-.amazon, .walmart {
-  width: 260px;
-  height: 260px;
-}
-
-.center {
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-}
-
-.top, .bottom {
-  display: flex;
-  gap: 15px;
-}
-
-.target {
-  width: 150px;
-  height: 125px;
-}
-.etsy {
-  width: 295px;
-  height: 125px;
-}
-.tiktok {
-  width: 295px;
-  height: 125px;
-}
-.ebay {
-  width: 150px;
-  height: 125px;
-}
-
-.store-box img {
-  max-width: 100%;
-  max-height: 100%;
-}
 
 /* Staggered animation delays */
 .store-box:nth-child(1) { animation-delay: 0.2s; }
