Updated contact form input text color to default

--- a/src/components/ContactForm/ContactForm.scss
+++ b/src/components/ContactForm/ContactForm.scss
@@ -74,7 +74,7 @@
       height: 46px;
       background: #fff;
       border: 1px solid #000;
-      color: #fffef7; 
+      // color: #fffef7; 
       border-radius: 5px;
     }
 
