--- a/src/components/ContactForm/ContactForm.scss
+++ b/src/components/ContactForm/ContactForm.scss
@@ -84,6 +84,8 @@
         height: 92px;
         border-radius: 5px;
         border: 1px solid #000;
+        resize: none;
+        box-sizing: border-box;
       }
     }
 
