--- a/src/components/ContactForm/ContactForm.scss
+++ b/src/components/ContactForm/ContactForm.scss
@@ -59,7 +59,7 @@
       display: flex;
       flex-direction: column;
       width: 100%;
-      
+      padding-left: 5;
       
     }
 
@@ -72,7 +72,7 @@
     input {
       width: 340px;
       height: 46px;
-      background: #fff;
+      background: #fffef7;
       border: 1px solid #000;
       // color: #fffef7; 
       border-radius: 5px;
