--- a/src/components/ContactForm/ContactForm.scss
+++ b/src/components/ContactForm/ContactForm.scss
@@ -72,8 +72,8 @@
       height: 46px;
       background: #fffef7;
       border: 1px solid #000;
-      padding-left: 5;
       border-radius: 5px;
+      padding: 5px;
     }
 
     .message {
