--- a/src/components/ContactForm/ContactForm.scss
+++ b/src/components/ContactForm/ContactForm.scss
@@ -81,6 +81,7 @@
         width: 700px;
         height: 92px;
         border-radius: 5px;
+        padding: 5px;
         border: 1px solid #000;
         resize: none;
         box-sizing: border-box;
