--- a/src/components/ContactForm/ContactForm.scss
+++ b/src/components/ContactForm/ContactForm.scss
@@ -82,7 +82,7 @@
         height: 92px;
         border-radius: 5px;
         padding: 5px;
-        border: 1px solid #000;
+        // border: 1px solid #000;
         resize: none;
         box-sizing: border-box;
       }
