--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -15,11 +15,12 @@
 }
 
 /* Mobile Responsive */
-@media (max-width: 768px) {
+@media (max-width: 360px) {
   .footer {
     font-family: "Lugfa";
-    height: 60px;
-    font-size: 11px;
+    height: 30px;
+    margin-top: 10px;
+    font-size: 13px;
     text-align: center;
   }
 }
