--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -6,8 +6,7 @@
   align-items: center;
   z-index: 10;
 
-  .logo {
-    // width: 155px;  
+  .logo { 
     height: 100px;
     margin: 50px 0px 50px 0px;
     object-fit: contain;
@@ -17,8 +16,14 @@
 
 
 /* Mobile Responsive */
-@media (max-width: 768px) {
+@media (max-width: 360px) {
   .header {
-    height: 200px;
+    height: 160px;
+    .logo {  
+      height: 100px;
+      margin: 30px 0px 30px 0px;
+      object-fit: contain;
+    }
   }
+  
 }
