updated mobile design version 1.2

--- a/src/components/ContactForm/ContactForm.scss
+++ b/src/components/ContactForm/ContactForm.scss
@@ -14,6 +14,7 @@
   text-align: center;
   font-family: 'Lufga';
   margin-bottom: 45px;
+  width: 1500px;
 
   .contactHeader {
     text-align: center;
@@ -150,6 +151,7 @@
     text-align: center;
     font-family: 'Lufga';
     margin-bottom: 10px;
+    width: 360px;
   
     .contactHeader {
       text-align: center;
