--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -2,7 +2,7 @@
 
 .footer {
   font-family: "Lugfa";
-  width: 100%;
+  width: 1500px;
   height: 40px;
   color: #A47764;
   display: flex;
@@ -22,5 +22,6 @@
     margin-top: 10px;
     font-size: 13px;
     text-align: center;
+    width: 360px;
   }
 }
