--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,5 +1,5 @@
 .header {
-  width: 100%;
+  width: 1500px;
   height: 200px;  
   display: flex;
   justify-content: center;
@@ -19,6 +19,7 @@
 @media (max-width: 360px) {
   .header {
     height: 160px;
+    width: 360px;
     .logo {  
       height: 100px;
       margin: 30px 0px 30px 0px;
