--- a/src/components/OnlineStores/OnlineStores.scss
+++ b/src/components/OnlineStores/OnlineStores.scss
@@ -13,6 +13,7 @@
   text-align: center;
   font-family: 'Lufga';
   color: #A47764;
+  width: 1500px;
 
   .heading {
     text-align: center;
@@ -112,21 +113,22 @@
     text-align: center;
     font-family: 'Lufga';
     color: #A47764;
-  
+    width: 360px;
     .heading {
       text-align: center;
     
       h1 {
         font-size: 34px; 
-        font-weight: 500;
-        
+        font-weight: 500; 
+
       }
     }
     .paragraph {
       p {
         font-size: 18px;  
         margin-bottom: 30px;
-        width: 340px;
+        margin-left: 10px;
+        margin-right: 10px; 
       }
     }
     .subHeading {
@@ -135,7 +137,7 @@
       h2 {
         font-size: 24px;  
         margin-bottom: 10px;
-        font-weight: 400;
+        font-weight: 400; 
       }
     }
   
