--- a/src/index.scss
+++ b/src/index.scss
@@ -35,6 +35,7 @@ body {
   flex: 1;
 }
 @media (max-width: 360px) {
+
   body {
     font-family: "Lugfa", sans-serif;
     background-color: #181818;
@@ -44,5 +45,9 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+  }
+  .App {
+    min-height: 100vh;
+    max-width: 1500px;
   }
 }
