--- a/src/components/Loader/Loader.scss
+++ b/src/components/Loader/Loader.scss
@@ -2,8 +2,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 10px; /* Positions below the header logo */
-  }
+    margin-top: 10px;
+    width: 1500px;
+  
   
   .loader-wrapper {
     display: flex;
@@ -20,7 +21,37 @@
     border-radius: 50%;
     animation: spin 1s linear infinite;
   }
+}
   
+/* Mobile Responsive */
+@media (max-width: 360px) {
+  .loader-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 5px;
+    width: 360px;
+  
+  
+  .loader-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    // min-height: 300px; /* Ensures loader is visible before content */
+  }
+  
+  .loader {
+    width: 20px;
+    height: 20px;
+    border: 3px solid #A47764;
+    border-top: 3px solid transparent;
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+  }
+}
+  
+}
+
   @keyframes spin {
     0% {
       transform: rotate(0deg);
